Update FitCalculatorTest.java